--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,4 +1,6 @@
 <resources>
   <color name="colorPrimary">#023c69</color>
-  <color name="colorPrimaryDark">#ffffff</color>
+  <color name="colorPrimaryDark">#9a79c7</color>
+  <color name="iconBackground">#9a79c7</color>
+  <color name="splashscreen_background">#9a79c7</color>
 </resources>
